[postcube.cz] Added background color to video - fallback for iOS

--- a/postcube.cz/src/html/components/video.njk
+++ b/postcube.cz/src/html/components/video.njk
@@ -59,7 +59,9 @@
     }
   }
 
-
+  #video {
+    background-color: var(--postcube-primary);
+  }
 </style>
 <section id="" class="video">
   <div class="mdc-layout-grid">
