--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -167,8 +167,7 @@
           </g>
         </svg>
         <h3>Příjem i&nbsp;odesílání zásilek</h3>
-        <p>PostCube vyzvedává a odesílá zásilky za vás. Pro přijetí stačí poslat kurýrovi odkaz a při odesílání vyplnit údaje
-          o&nbsp;příjemci.</p>
+        <p>Pro příjem zboží stačí kurýrovi poslat jednorázový odkaz pro otevření PostCube a při odesílání vyplnit údaje o příjemci a vložit zásilku do chytré schránky.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg xmlns="http://www.w3.org/2000/svg" width="23.835" height="48" viewBox="0 0 23.835 45.402">
