--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -87,7 +87,7 @@
   <section id="about" class="about icon-section mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Příjem a odesílání zásilek snadno a rychle.</h2>
+        <h2>Příjem a odesílání zásilek z pohodlí domova či kanceláře.</h2>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
