PostCube / multiple copy changes

--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -23,7 +23,7 @@
               transform="translate(-719.985 -3046.657)"/>
       </svg>
       <h3>Objednáte online</h3>
-      <p>Při doručení stačí poslat kurýrovi odkaz k otevření boxu.</p>
+      <p>Nakupujte na internetu, jak jste zvyklí.</p>
     </div>
     <div
       class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
@@ -38,8 +38,7 @@
               transform="translate(-748.02 -2953.099)"/>
       </svg>
       <h3>Přijede kurýr</h3>
-      <p>Pomocí jednorázového odkazu kurýr otevře box a bezpečně do něj vloží
-        zásilku.</p>
+      <p>Při doručení pošlete kurýrovi jednorázový odkaz pro otevření boxu, aby do něj mohl bezpečně uložit zásilku.</p>
     </div>
     <div
       class="after-icon--last icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
