--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -197,7 +197,7 @@
         </svg>
         <h3>Síť dopravců roste každým dnem</h3>
         <p><a href="https://liftago.cz">Liftago</a> už má PostCube plně integrovanou
-          do svého systému.</p>
+          do svého systému a odkaz k otevření schránky posíláme automaticky.</p>
         <p>Při objednávce zásilek <strong>přes jiné dopravce</strong> vám kurýr
           zavolá v&nbsp;okamžiku doručení a vy mu jen v&nbsp;aplikaci pošlete vygenerovaný
           kód pro otevření PostCube, kam váš balík vloží. Čekat na něj
