--- a/postcube.cz/src/html/jak-box-funguje/index.njk
+++ b/postcube.cz/src/html/jak-box-funguje/index.njk
@@ -170,8 +170,7 @@
                   </svg>
                 </div>
                 <h3>Propojená s&nbsp;přepravcem</h3>
-                <p>Vy na příjmu být nemusíte. Aplikace komunikuje s&nbsp;přepravcem
-                  automaticky.</p>
+                <p>Pro otevření PostCube stačí kurýrovi v aplikaci poslat vygenerovaný kód. Při přepravě Liftagem se pošle kód automaticky.</p>
               </div>
               <div class="steps__content mdc-layout-grid__cell">
                 <div class="steps__bg">
@@ -257,7 +256,7 @@
               <div
                 class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
                 <button class="mdc-button content-btn" disabled>
-                  <span class="mdc-button__label" target="_blank" rel="noopener">Stáhnout pro iPhone</span>
+                  <span class="mdc-button__label" target="_blank" rel="noopener">Již brzy i pro iPhone</span>
                 </button>
               </div>
               <div class="accordion mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
@@ -299,7 +298,7 @@
                 <p class="content__subtitle--blue">Lze provést svépomocí</p>
                 <p>PostCube lze umístit na zem. Pro pohodlnější odebírání zásilek ji ale
                   doporučujeme připevnit na stojan. Ten se navrtá na betonový základ nebo
-                  přenosnou dlaždici z&nbsp;naší nabídky.</p>
+                  přenosnou dlaždici z&nbsp;<a href="https://shop.postcube.cz/prislusenstvi">naší nabídky.</a></p>
               </div>
               <div class="steps__content mdc-layout-grid__cell">
                 <img alt="Fotografie - Upozornění na Telefonu"
@@ -362,8 +361,8 @@
                 </div>
                 <h3>Kontaktujte nás</h3>
                 <p>Naše zákaznická podpora je vám k&nbsp;dispozici na telefonním čísle
-                  +420603&nbsp;314&nbsp;050, e-mailu <a
-                    href="mailto:info&#64;chytrybox.cz">info&#64;<!-- -->chytrybox.cz</a> a
+                  +420&nbsp;739&nbsp;304&nbsp;, e-mailu <a
+                    href="mailto:info&#64;postcube.cz">info&#64;<!-- -->postcube.cz</a> a
                   v&nbsp;online chatu na&nbsp;webu.</p>
               </div>
               <div class="steps__content mdc-layout-grid__cell">
