PostCube / TS and PP in Czech

--- a/postcube.cz/src/html/components/footer.njk
+++ b/postcube.cz/src/html/components/footer.njk
@@ -4,7 +4,7 @@
       <div
         class="footer__list mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
         <ul>
-          <li><a href="/PP">Privacy policy</a></li>
+          <li><a href="/PP">Zásady ochrany osobních údajů</a></li>
           <li><a href="/TC">Terms & Conditions</a></li>
         </ul>
       </div>
