--- a/postcube.cz/src/html/components/footer.njk
+++ b/postcube.cz/src/html/components/footer.njk
@@ -5,7 +5,7 @@
         class="footer__list mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
         <ul>
           <li><a href="/PP">Zásady ochrany osobních údajů</a></li>
-          <li><a href="/TC">Terms & Conditions</a></li>
+          <li><a href="/TC">Všeobecné obchodní podmínky</a></li>
         </ul>
       </div>
       <div class="footer__logo mdc-layout-grid__cell">
