PostCube / last pre-release copy changes

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -199,8 +199,7 @@
         <p><a href="https://liftago.cz">Liftago</a> už má PostCube plně integrovanou
           do svého systému a odkaz k otevření schránky posíláme automaticky.</p>
         <p>Při objednávce zásilek <strong>přes jiné dopravce</strong> vám kurýr
-          zavolá v&nbsp;okamžiku doručení a vy mu jen v&nbsp;aplikaci pošlete vygenerovaný
-          kód pro otevření PostCube, kam váš balík vloží. Čekat na něj
+          zavolá v&nbsp;okamžiku doručení a vy mu v aplikaci jednoduše pošlete odkaz pro otevření PostCube, kam váš balík vloží. Čekat na něj
           nemusíte.</p>
       </div>
       <div class="action-link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
