--- a/postcube.cz/src/html/jak-box-funguje/index.njk
+++ b/postcube.cz/src/html/jak-box-funguje/index.njk
@@ -117,8 +117,7 @@
               <div class="steps__content mdc-layout-grid__cell">
                 <img alt="Fotografie - Zadání požadavku" src="{{ boxBG04 | cloudinaryUrl(dpr="auto", width=400) }}">
                 <h3>Zadání požadavku</h3>
-                <p>V&nbsp;mobilní aplikaci zadáte kód boxu příjemce nebo adresu pro doručení,
-                  zvolíte přepravní společnost, způsob platby a uhradíte dopravu.</p>
+                <p>V mobilní aplikaci zadáte kód boxu příjemce nebo adresu pro doručení, zvolíte způsob přepravy a uhradíte dopravu.</p>
               </div>
               <div class="steps__content mdc-layout-grid__cell">
                 <img alt="Fotografie - Označení balíku"
@@ -361,7 +360,7 @@
                 </div>
                 <h3>Kontaktujte nás</h3>
                 <p>Naše zákaznická podpora je vám k&nbsp;dispozici na telefonním čísle
-                  +420&nbsp;739&nbsp;304&nbsp;, e-mailu <a
+                  +420&nbsp;739&nbsp;304&nbsp;189, e-mailu <a
                     href="mailto:info&#64;postcube.cz">info&#64;<!-- -->postcube.cz</a> a
                   v&nbsp;online chatu na&nbsp;webu.</p>
               </div>
