--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -233,9 +233,7 @@
           <path d="M25.7163 15.6H21.1723C20.8523 18.064 19.7643 18.8 17.8763 18.8H16.3723V22.928H17.9723C18.9323 22.928 20.4683 22.64 20.8843 22.032V38H25.7163V15.6ZM29.382 33.392V38H34.214V33.392H29.382Z" fill="white"/>
         </svg>
         <h3>Příprava zásilky</h3>
-        <p>Odesílatel vloží zásilku pro odeslání do boxu a v&nbsp;aplikaci vyplní
-          údaje o&nbsp;příjemci. Při doručování zásilky ji kurýr vyzvedne
-          u&nbsp;prodejce.</p>
+        <p>Odesílatel vyplní údaje o příjemci a do PostCube vloží zásilku, která zde počká na kurýra. Při online objednávkách vyzvedává kurýr zásilku na výdejním místě e-shopu.</p>
       </div>
       <div
         class="after-icon icon-section__content link-icon--after-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
@@ -244,7 +242,7 @@
           <path d="M16.658 23.568H21.49C21.426 21.008 22.578 19.248 24.786 19.248C26.802 19.248 27.986 20.496 27.986 22.384C27.986 23.888 27.058 25.04 25.426 25.808L21.778 27.632C19.698 28.656 16.722 30.96 16.722 34.448L16.754 38H32.754V33.84H21.522C21.522 32.784 22.834 31.952 23.922 31.376L27.474 29.584C31.058 27.792 32.818 25.424 32.818 22.384C32.818 18.128 29.554 15.344 24.786 15.344C19.794 15.344 16.594 18.448 16.658 23.568ZM35.2883 33.392V38H40.1203V33.392H35.2883Z" fill="white"/>
         </svg>
         <h3>Získání informací</h3>
-        <p>Přes API můžeme přímo komunikovat s vaším systémem. Kurýr tak uvidí adresu, číslo balíku, telefonní kontakt a další aktuální informace přímo ve vaší aplikaci.</p>
+        <p>Přes API můžeme přímo komunikovat s vaším systémem. Kurýr tak uvidí adresu, číslo balíku, telefonní kontakt a další aktuální informace rovnou v aplikaci.</p>
       </div>
       <div
         class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
