PostCube / new image in how it works

--- a/postcube.cz/src/html/jak-box-funguje/index.njk
+++ b/postcube.cz/src/html/jak-box-funguje/index.njk
@@ -9,7 +9,7 @@
 {% set boxBG07 = images["box-bg07.png"]["public_id"] %}
 
 {% set boxBG08 = images["box-bg08.png"]["public_id"] %}
-{% set boxBG09 = images["box-bg09.png"]["public_id"] %}
+{% set boxBG09 = images["box-header-image.jpg"]["public_id"] %}
 {% set boxBG10 = images["box-bg10.png"]["public_id"] %}
 
 {% block title %}
