[www.hackercamp.cz] FAQ - added connection section text

--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -625,7 +625,27 @@
       <h2 property="name">Jak s dopravou a parkováním?</h2>
       <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
         <div property="text">
+          <p>Adresa konání: Rekreační středisko Sobeňák, Starý Rožmitál 148,
+            Rožmitál pod Třemšínem</p>
 
+          <p>Na místo konání akce se můžeš dostat více způsoby:</p>
+
+          <ul>
+            <li>Vlakem</li>
+            <li>Autobusem</li>
+          </ul>
+
+          <p>Budeš potřebovat odvoz z&nbsp;nádraží nebo na autobus? Dejte vědět! Podle
+            zájmu či potřeby domluvíme odvoz&nbsp;&ndash; jedno větší auto, Liftago
+            servis&nbsp;&ndash; prostě něco, aby nebylo třeba chodit po svých, pokud zrovna
+            nebudeš mít náladu na “procházku”.&nbsp;:)</p>
+
+          <p>Samozřejmě, že můžeš dorazit autem. Ale pokud svého plechového
+            mazlíka bereš na výlet, zkus ho, prosím, naplnit. Budeme rádi, když les
+            bude lesem a ne parkovištěm. Takže pokud nemáš spolucestující, najdi si
+            nějaké v&nbsp;kanále #spolujízda. A&nbsp;dej nám vědět ve formuláři, jak to
+            s&nbsp;autem a parkingem budeš mít, ať vše zajistíme ke spokojenosti
+            všech&nbsp;:)</p>
         </div>
       </div>
     </div>
