PostCube / small faq copy changes

--- a/postcube.cz/src/html/components/faq-firmy.njk
+++ b/postcube.cz/src/html/components/faq-firmy.njk
@@ -33,9 +33,7 @@
         <div class="faq--content">
           <p>Ano. Jen výběrem velikosti to zdaleka nekončí. Můžete si vybrat
             z&nbsp;různých základových barev, případně PostCube opatřit polepem fólií
-            a sladit ji tak s&nbsp;barvou a stylem svého domu či plotu. Zcela jiný vzhled
-            dodá vaší poštovní schránce také to, zda bude stát na zemi, nebo na
-            stojanu.</p>
+            a sladit ji tak s&nbsp;barvou a stylem svého domu či plotu. Zcela jiný vzhled dodá vaší chytré poštovní schránce také to, zda bude stát na stojanu, nebo bude připevněná na zeď.</p>
         </div>
       </div>
     </div>
