--- a/postcube.cz/src/html/components/faq.njk
+++ b/postcube.cz/src/html/components/faq.njk
@@ -24,7 +24,7 @@
         <input type="checkbox" name="accordion__faq" id="faq4" class="faq--input">
         <label for="faq4" class="faq--label">Mohu si vzhled PostCube nějak přizpůsobit?</label>
         <div class="faq--content">
-          <p>Ano. Jen výběrem velikosti to zdaleka nekončí. Můžete si vybrat z různých barev, případně PostCube opatřit polepem fólií a sladit ji s barvou a stylem svého domu či plotu. Zcela jiný vzhled dodá vaší poštovní schránce také to, zda bude stát na zemi, nebo na stojanu. Různé varianty PostCube a jejího upevnění si můžete vyzkoušet pomocí konfigurátoru.</p>
+          <p>Ano. Jen výběrem velikosti to zdaleka nekončí. Můžete si vybrat z různých barev, případně PostCube opatřit polepem fólií a sladit ji s barvou a stylem svého domu či plotu. Zcela jiný vzhled dodá vaší chytré poštovní schránce také to, zda bude stát na stojanu, nebo bude připevněná na zeď. Různé varianty PostCube a jejího upevnění si můžete vyzkoušet pomocí konfigurátoru.</p>
         </div>
       </div>
     </div>
