Postcube, remove duplict contact form

--- a/postcube.cz/src/html/components/contact.njk
+++ b/postcube.cz/src/html/components/contact.njk
@@ -10,8 +10,8 @@
       <div class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
         <h3>Pošlete nám na sebe kontakt</h3>
         <form id="contact-form" action="https://uwjqzwx0d3.execute-api.eu-central-1.amazonaws.com/production/postcube-contact-form" method="POST">
-          <label><input name="name" placeholder="Jméno nebo název firmy" id="company-name-footer" type="text"></label>
-          <label><input name="email" id="phone-name-footer" placeholder="Email" type="text"></label>
+          <label><input name="name" placeholder="Jméno nebo název firmy" id="company-name" type="text"></label>
+          <label><input name="email" id="phone-name" placeholder="Email" type="text"></label>
           <div class="mdc-layout-grid__inner">
             <div class="contact__form--button mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
               <button class="mdc-button content-btn" type="submit">
